# cookiecutter-pypackage

./: README.rst  cookiecutter.json
docs/: pypi_release_checklist.rst
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: python-package.yml  python-publish.yml
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py  cli.py  engines.py  managers.py  models.py  utils.py
