{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
} %}

[metadata]
name = "{{ cookiecutter.project_slug }}"
author = "{{ cookiecutter.full_name.replace('\"', '\\\"') }}"
author_email = "{{ cookiecutter.email }}"
version = attr: {{ cookiecutter.project_slug }}.__version__
url = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.project_short_description }}"
long_description = file: README.rst, HISTORY.RST, LICENSE
long_description_content_type = "text/restructured-text"
keywords = "{{ cookiecutter.keywords }}"
{%- if cookiecutter.open_source_license in license_classifiers %}
license="{{ cookiecutter.open_source_license }}",
{%- endif %}
classifiers =
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
{%- if cookiecutter.open_source_license in license_classifiers %}
    "{{ license_classifiers[cookiecutter.open_source_license] }}",
{%- endif %}

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =

[options.entry_points]
console_scripts =
    {{ cookiecutter.entry_point }} = {{ cookiecutter.project_slug }}.__main__:main

[options.packages.find]
exclude =
    docs*
    tests*

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

{%- if cookiecutter.use_pytest == 'y' %}
[tool:pytest]
collect_ignore = ['setup.py']
minversion = 6.0
testpaths =
    tests
{%- endif %}
